--- a/style/style_receitas.css
+++ b/style/style_receitas.css
@@ -5,7 +5,7 @@
 main{
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-evenly;
+    justify-content: space-evenly
     
 }
 main h1{
